# palautusrepositorio

./: haarassa.txt  haaratiedosto.txt  uusimainfile.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/src/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tagi/: tagitiedosto.txt
viikko4/verkkokauppa/src/tests/: .coverage  kauppa_test.py
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/laskin/src/: commands.py  kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  player_reader.py  query_builder.py  statistics.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli.py  pelimuoto.py
