[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["gitelras <ella.rasalo@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
cowsay = "^6.1"
tomlkit = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
